--- a/styles/add_pop_up.css
+++ b/styles/add_pop_up.css
@@ -67,13 +67,13 @@ body {
 .textContainer_addTask {
   height: 73px;
   margin-top: 40px;
-  margin-left: 0px;
+  margin-left:auto;
   display: flex;
   width: 95%;
   justify-content: space-between;
 }
 .closeAddBoard {
-
+margin-right: 52px;
   border: 0;
   background: transparent;
   font-weight: bold;
@@ -1530,9 +1530,17 @@ width: 85%;
   width: 90%;
 }
 }
+@media (max-width: 498px) {
+.text_addTask {
+  font-size: 30px;
+}
+.underListContactPopUp{
+  width: 70% !important;
+}
+}
 @media (max-width: 398px) {
 .text_addTask {
-  font-size: 43px;
+  font-size: 29px;
 }
 .underListContactPopUp{
   width: 70% !important;
