--- a/styles/board.css
+++ b/styles/board.css
@@ -319,7 +319,7 @@
   display: flex;
   flex-direction: column;
   height: 168px;
-  margin-top: 80px;
+  margin-top: 37px;
 }
 
 .description {
@@ -499,6 +499,7 @@
   background: #fff;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
   width: 525px;
+  min-height: 86%;
 }
 
 .largesCard {
@@ -881,11 +882,13 @@ width: 100%;
 }
 
 .desingLagrCard {
-  height: 90%;
+  height: 94%;
   position: fixed;
   bottom: 114px;
-  top: 4px;
+  top: 15px;
   justify-content: center;
+  display: flex;
+  align-items: end;
 }
 
 .listBoard {
