board.responsev-largCard

--- a/styles/add_pop_up.css
+++ b/styles/add_pop_up.css
@@ -412,7 +412,7 @@ textarea::placeholder {
   margin-top: 8px;
 }
 
-.text_DueDate {
+.text_DueDateAdTask {
   height: 24px;
   font-family: "Inter", sans-serif;
   font-weight: 400;
