--- a/styles/board_responisv.css
+++ b/styles/board_responisv.css
@@ -10,8 +10,15 @@
   }
 }
 
-@media (max-width: 510px) { 
-
+@media (max-width: 520px) { 
+  .largCardTitle h1 {
+    color: var(--black, #000);
+    font-family: Inter;
+    font-size: 36px !important;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+  }
 }
 @media (max-width: 513px) {
   .largeCardA {
@@ -271,15 +278,31 @@
     width: 283px;
   }
 }
+@media (max-width: 417px) { 
+  .largeCardA {
+  width: 260px !important;
+}
+}
+@media (max-width: 422px) { 
+  .largeCardA {
+  width: 300px;
+}
+}
+
+@media (max-width: 490px) { 
+  .largeCardA {
+  width: 348px ;
+}}
+ 
 @media (max-width: 459px) { 
   .largeCardA {
-    width: 350px !important;
+    width: 350px ;
   }
 
 }
 @media (max-width: 381px) { 
   .largeCardA {
-    width: 300px !important;
+    width: 300px ;
   }
 }
 
@@ -1057,21 +1080,11 @@ width: 319px;
   }
 }
 
-@media (max-width: 397px) { 
+@media (max-width: 366px) { 
   .largeCardA {
-    max-height: 85%;
-    border: solid;
-    display: flex;
-    padding: 14px 24px;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 24px;
-    border-radius: 30px;
-    background: #fff;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
-    width: 80%;}
-} 
-
+    width: 200px;
+  }
+}
 
 @media (max-width: 444px) {
   #addTaskLargeCard {
