boardRespo- Board.css

--- a/styles/add_pop_up.css
+++ b/styles/add_pop_up.css
@@ -1528,6 +1528,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .underListContactPopUp{
   width: 70% !important;
 }
+.textContainer_addTask {
+  margin-top: 0;
+  }
+}
+@media (max-width: 421px) {
+.textContainer_addTask {
+margin-top: 0;
+}
+}
+.underListContactPopUp{
+  width: 70% !important;
 }
 @media (max-width: 398px) {
 .text_addTask {
@@ -1543,7 +1554,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 18px;
   }
   .leadsToBoardPopUp {
-    width: 95%;
+    width: 95%!important;
   }
   .searchContacts {
     font-size: 16px;
