--- a/styles/board.css
+++ b/styles/board.css
@@ -252,7 +252,6 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
-  /* border: 2px solid var(--Version-2-main-color, #2a3647); */
   border-radius: 24px;
   background: var(--white, #fff);
   box-sizing: border-box;
@@ -264,6 +263,7 @@
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
   height: 280px;
   max-width: 252px;
+  margin: 24px;
 }
 
 .cardA:hover {
