--- a/styles/board_responisv.css
+++ b/styles/board_responisv.css
@@ -1,3 +1,8 @@
+@media (max-height: 700px) {
+.tasksCardsDiv {
+    height: 52vh !important;
+}
+}
 @media (max-width: 620px) {
   .largeCardA {
     width: 411px;
@@ -49,6 +54,10 @@
 @media (max-width: 340px) {
   .largeCardA {
     width: 70% !important
+  }
+
+  .cardA {
+    margin: 0px;
   }
 } 
 @media (max-width: 320px) and (max-width: 375px) {
@@ -670,7 +679,7 @@
     display: flex;
     flex-direction: row;
     gap: 16px;
-    height: 40vh;
+    height: 30vh;
     overflow-x: scroll;
     display: flex;
     align-items: center;
