--- a/styles/board.css
+++ b/styles/board.css
@@ -1047,7 +1047,7 @@ width: 100%;
   position: relative;
 }
 
-.custom-checkbox-board label:before {
+.label:before {
   content: "";
   width: 24px;
   height: 24px;
@@ -1068,6 +1068,18 @@ width: 100%;
   position: absolute;
   left: 300px;
 }
+
+.contactListBoard:hover .custom-checkbox-board input[type="checkbox"]:checked+label:before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 300px;
+}
+
 
 .custom-checkbox-board input[type="checkbox"]:checked+label:before {
   content: "";
@@ -1261,6 +1273,10 @@ width: 100%;
   color: black;
 }
 
+.contactListBoard:hover .nameContactWhite {
+  color: black;
+}
+
 .nameContactWhite {
   color: white;
 }
@@ -1273,6 +1289,10 @@ width: 100%;
   padding: 7px 16px;
 }
 .contactList:hover{
+  background-color: #eeeeee; 
+}
+
+.contactListBoard:hover {
   background-color: #eeeeee; 
 }
 
@@ -1299,7 +1319,7 @@ line-height: 24px;
   align-items: center;
   width: 405px;
   border-radius: 10px;
-  padding: 4px;
+  padding: 8px;
   /* height: 116px; */
 
 }
