--- a/styles/board_responisv.css
+++ b/styles/board_responisv.css
@@ -1,7 +1,7 @@
 @media (max-height: 700px) {
-.tasksCardsDiv {
+  .tasksCardsDiv {
     height: 52vh !important;
-}
+  }
 }
 @media (max-width: 620px) {
   .largeCardA {
@@ -15,7 +15,7 @@
   }
 }
 
-@media (max-width: 520px) { 
+@media (max-width: 520px) {
   .largCardTitle h1 {
     color: var(--black, #000);
     font-family: Inter;
@@ -25,6 +25,7 @@
     line-height: 120%;
   }
 }
+
 @media (max-width: 513px) {
   .largeCardA {
     width: 400px;
@@ -37,6 +38,9 @@
     font-size: 16px;
   }
 
+  .custom-checkbox-board label:before {
+    left: 180px;
+  }
 
   .searchContactsBoard {
     outline: none;
@@ -49,25 +53,26 @@
     margin-top: 8px;
     flex-direction: column;
     align-items: center;
+  }
 }
-}
+
 @media (max-width: 340px) {
   .largeCardA {
-    width: 70% !important
+    width: 70% !important;
   }
 
   .cardA {
     margin: 0px;
   }
-} 
-@media (max-width: 320px) and (max-width: 376px) {
+}
 
-  .title{
+@media (max-width: 320px) and (max-width: 376px) {
+  .title {
     width: 53px;
     margin-left: 139px;
   }
 
-   .frame203Board {
+  .frame203Board {
     display: flex;
     flex-direction: column;
     height: 64px;
@@ -80,31 +85,27 @@
     width: 50px;
   }
 
-.text_enterTitle {
-  background-color: transparent;
-}
+  .text_enterTitle {
+    background-color: transparent;
+  }
 
-.frame17Borad {
-  width: 241px;
-  margin-left: 139px;
-}
+  .frame17Borad {
+    width: 241px;
+    margin-left: 139px;
+  }
 
-/* .asignedTo_v1 {
-  width: 0;
-  margin-left: 139px;
-} */
+  .categoryFrame74Board {
+    width: 205px;
+    margin-top: 8px;
+  }
 
-.categoryFrame74Board {
-  width: 205px;
-  margin-top: 8px;}
-
-.titleBoard {
-  font-size: 47px !important;
-}
+  .titleBoard {
+    font-size: 47px !important;
+  }
 
   #addTaskLargeCard {
     width: 334px !important;
-}
+  }
   .searchContactsBoard {
     outline: none;
     border-style: none;
@@ -117,7 +118,7 @@
     top: -2px;
     bottom: 128px;
     width: 93%;
-}
+  }
 
   .largeCardA {
     max-height: 94%;
@@ -149,19 +150,15 @@
     font-style: normal;
     font-weight: 700;
     line-height: 120%;
-    /* 43.2px */
   }
 
   .largCardTextArea {
     color: var(--black, #000);
-
-    /* Version 2/body */
     font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
-    /* 19.2px */
   }
 
   .headlineBoard {
@@ -245,7 +242,7 @@
   .progressTitles {
     font-size: 27px !important;
   }
-  .dueDateBoard{
+  .dueDateBoard {
     width: 100%;
   }
   .dueDate_frame14 {
@@ -253,30 +250,31 @@
   }
 
   .description {
-    margin-left: 141px;}
+    margin-left: 141px;
+  }
 
-    .underListContactBoard {     
-      width: 222px;   
+  .underListContactBoard {
+    width: 222px;
   }
 
   .contactListBoard {
     width: 203px;
+  }
+
+  .circleAvatarBoard {
+    width: 30px;
+    height: 30px;
+    border-radius: 45px;
+  }
+  .nameIdList {
+    margin-top: 0;
+    color: white;
+    font-size: 14px;
+    font-family: "Inter", sans-serif;
+  }
 }
 
-.circleAvatarBoard {
-  width: 30px;
-  height: 30px; 
-  border-radius: 45px;
-}
-.nameIdList {
-  margin-top: 0;
-  color: white;
-  font-size: 14px;
-  font-family: "Inter", sans-serif;
-}
-}
-
-@media (max-width: 570px) { 
+@media (max-width: 570px) {
   .largeCardA {
     width: 400px !important;
   }
@@ -286,37 +284,56 @@
   .titleEditCard {
     width: 283px;
   }
-}
-@media (max-width: 367px) { 
-  .largeCardA {
-  width: 270px !important;
-}
-}
-@media (max-width: 417px) { 
-  .largeCardA {
-  width: 307px ;
-}
-}
-@media (max-width: 422px) { 
-  .largeCardA {
-  width: 300px;
-}
-}
-
-@media (max-width: 490px) { 
-  .largeCardA {
-  width: 348px ;
-}}
- 
-@media (max-width: 459px) { 
-  .largeCardA {
-    width: 350px ;
+  .contactListBoard:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 230px;
+  }
+  .custom-checkbox-board label:before {
+    left: 230px;
   }
 
+  .circleAvatarBoard {
+    margin-left: -26px !important;
+  }
+
+  .contactAvatarBoard {
+    padding-left: 30px;
+    flex-wrap: wrap;
+  }
 }
-@media (max-width: 381px) { 
+
+@media (max-width: 367px) {
   .largeCardA {
-    width: 300px ;
+    width: 270px !important;
+  }
+}
+
+@media (max-width: 417px) {
+  .largeCardA {
+    width: 307px;
+  }
+}
+
+@media (max-width: 422px) {
+  .largeCardA {
+    width: 300px;
+  }
+}
+
+@media (max-width: 490px) {
+  .largeCardA {
+    width: 348px;
+  }
+}
+
+@media (max-width: 459px) {
+  .largeCardA {
+    width: 350px;
+  }
+}
+
+@media (max-width: 381px) {
+  .largeCardA {
+    width: 300px;
   }
 }
 
@@ -349,6 +366,13 @@
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
     width: 500px;
   }
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 273px !important;
+  }
+
+  .custom-checkbox-board label:before {
+    left: 273px !important;
+  }
 
   .searchContactsBoard {
     outline: none;
@@ -364,8 +388,8 @@
   }
 
   .frame211 {
-
-    width: 94%;}
+    width: 94%;
+  }
 
   .saveContainer {
     width: 83%;
@@ -383,8 +407,8 @@
     display: block;
   }
 
-  .imputLeft_addTaskBoard{
-   margin-right: 5px;
+  .imputLeft_addTaskBoard {
+    margin-right: 5px;
   }
 
   .searchbarIn {
@@ -426,7 +450,6 @@
   }
 
   .taskAria {
-    /* display: flex; */
     flex-direction: column;
     flex-wrap: wrap;
     padding: 0;
@@ -461,15 +484,14 @@
     font-size: 27px !important;
   }
 
-  .categoryFrame74Board{
-   width: 93%;
+  .categoryFrame74Board {
+    width: 93%;
   }
 
-  .dueDateBoard{
- width: 100%;
+  .dueDateBoard {
+    width: 100%;
+  }
 }
-  }
-
 
 @media (min-width: 649px) and (max-width: 900px) {
   .titleBoard {
@@ -481,6 +503,14 @@
     outline: none;
     border-style: none;
     font-size: 16px;
+  }
+
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 273px;
+  }
+
+  .custom-checkbox-board label:before {
+    left: 273px;
   }
 
   .headlineBoard {
@@ -544,7 +574,6 @@
   }
 
   .taskAria {
-    /* display: flex; */
     flex-direction: column;
     flex-wrap: wrap;
     padding: 0;
@@ -626,7 +655,6 @@
   .searchBar {
     width: 98%;
   }
-  
 
   .searchContactsBoard {
     outline: none;
@@ -659,7 +687,7 @@
   }
   .taskAria {
     width: 100% !important;
-}
+  }
 
   .searchContactsBoard {
     outline: none;
@@ -703,7 +731,7 @@
     margin-left: 10px;
   }
   .searchbarIn {
-    flex-direction: column
+    flex-direction: column;
   }
   .searchBox {
     width: 170px;
@@ -718,9 +746,9 @@
     flex-wrap: wrap;
     padding: 0;
     margin-left: 250px;
-    width: 75% ;
+    width: 75%;
   }
-  
+
   .searchContactsBoard {
     outline: none;
     border-style: none;
@@ -767,7 +795,6 @@
     margin-top: 79.5px;
     margin-bottom: 48px;
   }
-
 }
 
 @media (max-width: 1700px) {
@@ -781,9 +808,7 @@
     margin-top: 79.5px;
     margin-bottom: 48px;
   }
-  
 }
-
 
 @media (max-width: 622px) {
   .BoardcontentTask {
@@ -837,6 +862,14 @@
     width: 100%;
   }
 
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 320px !important;
+  }
+
+  .custom-checkbox-board label:before {
+    left: 320px !important;
+  }
+
   .contactAvatarBoard {
     width: 90%;
   }
@@ -865,7 +898,7 @@
     height: 12px;
     width: 97px;
     border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
   }
 
   .priorityMedium {
@@ -877,94 +910,101 @@
     width: 97px;
   }
 
-  .priorityLow {
-    padding: 14px 7px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    height: 12px;
-    width: 97px;
-  }
-
-  .categoryEditCard {
-    z-index: 6;
-    cursor: pointer;
-    display: flex;
-    padding: 12px 16px;
-    justify-content: space-between;
-    position: relative;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #d1d1d1);
-    background: var(--white, #fff);
-    color: var(--black, #000);
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    outline: none;
-    width: 90%;
-    margin-top: 8px;
-  }
-
-  .inputRight_addTaskEdit {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 24px;
-    margin-top: 80px;
-  }
-
-  .subtasksEdit {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-  }
-
-  .subtaskItem {
-    cursor: pointer;
-    display: flex;
-    width: 303px;
-    height: 32px;
-    padding: 4px 16px;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 8px;
-  }
-
-  .underListContactBoardEdit {
-    cursor: pointer;
-    position: absolute;
-    top: 35px;
-    padding-inline-start: 0px;
-    flex-direction: column;
-    border-radius: 10px;
-    background: var(--white, #fff);
-    z-index: 1;
-    max-height: 340px;
-    width: 94%;
-    overflow: auto;
-  }
-
-  .custom-checkbox-board input[type="checkbox"]:checked+label:before {
-    content: "";
-    width: 24px;
-    height: 24px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
+  .contactListBoard:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
     left: 230px;
   }
-
-  .saveContainer {
-    width: 81%;
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 44px;
+  .custom-checkbox-board label:before {
+    left: 230px;
   }
+}
+
+.priorityLow {
+  padding: 14px 7px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  height: 12px;
+  width: 97px;
+}
+
+.categoryEditCard {
+  z-index: 6;
+  cursor: pointer;
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-between;
+  position: relative;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: var(--white, #fff);
+  color: var(--black, #000);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  outline: none;
+  width: 90%;
+  margin-top: 8px;
+}
+
+.inputRight_addTaskEdit {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  margin-top: 80px;
+}
+
+.subtasksEdit {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.subtaskItem {
+  cursor: pointer;
+  display: flex;
+  width: 303px;
+  height: 32px;
+  padding: 4px 16px;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+}
+
+.underListContactBoardEdit {
+  cursor: pointer;
+  position: absolute;
+  top: 35px;
+  padding-inline-start: 0px;
+  flex-direction: column;
+  border-radius: 10px;
+  background: var(--white, #fff);
+  z-index: 1;
+  max-height: 340px;
+  width: 96%;
+  overflow: auto;
+}
+
+.custom-checkbox-board input[type="checkbox"]:checked + label:before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 230px;
+}
+
+.saveContainer {
+  width: 81%;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 44px;
 }
 
 @media (max-width: 835px) {
@@ -972,6 +1012,7 @@
     width: 100%;
   }
 }
+
 @media (max-width: 510px) {
   #addTaskLargeCard {
     width: 100%;
@@ -981,9 +1022,9 @@
     width: 91%;
   }
 
-.frame17Borad  {
-width: 319px;
-}
+  .frame17Borad {
+    width: 319px;
+  }
 
   .edittitle {
     display: flex;
@@ -1001,7 +1042,7 @@ width: 319px;
     display: flex;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    width:324px;
+    width: 324px;
     border-radius: 10px;
   }
 
@@ -1039,7 +1080,7 @@ width: 319px;
     overflow: auto;
   }
 
-  .custom-checkbox-board input[type="checkbox"]:checked+label:before {
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
     content: "";
     width: 24px;
     height: 24px;
@@ -1089,7 +1130,7 @@ width: 319px;
   }
 }
 
-@media (max-width: 366px) { 
+@media (max-width: 366px) {
   .largeCardA {
     width: 200px;
   }
@@ -1100,7 +1141,8 @@ width: 319px;
     width: 330px;
   }
   .largeCardA {
-    width: 300px !important;}
+    width: 300px !important;
+  }
 
   .inputLeft_addTaskBoard {
     width: 289px;
@@ -1166,14 +1208,14 @@ width: 319px;
     overflow: auto;
   }
 
-  .custom-checkbox-board input[type="checkbox"]:checked+label:before {
+  .custom-checkbox-board input[type="checkbox"]:checked + label:before {
     content: "";
     width: 24px;
     height: 24px;
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
-    left: 300px;
+    left: 170px;
   }
 
   .contactList {
@@ -1196,8 +1238,8 @@ width: 319px;
     border-style: none;
     outline: none;
     overflow: hidden;
-  } 
-  
+  }
+
   .inputRight_addTaskEdit {
     display: flex;
     width: 265px;
@@ -1206,47 +1248,39 @@ width: 319px;
     align-items: flex-start;
     gap: 24px;
     margin-top: 80px;
-  } 
-  
+  }
+
   .description {
     width: 200px;
-  } 
-
-@media (max-width: 1520px) {
-
-  .taskAria {
-    width: 91%;
   }
 
- 
-}  @media (max-width: 1405px) {
-
-  .taskAria {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 64px;
-    height: 688px;
-    width: 1071px;
-    align-items: flex-start;
-    gap: 26px;
-    flex-shrink: 0;
-    flex-wrap: wrap;
+  @media (max-width: 1520px) {
+    .taskAria {
+      width: 91%;
+    }
   }
-
-} }
+  @media (max-width: 1405px) {
+    .taskAria {
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 64px;
+      height: 688px;
+      width: 1071px;
+      align-items: flex-start;
+      gap: 26px;
+      flex-shrink: 0;
+      flex-wrap: wrap;
+    }
+  }
+}
 
 @media (max-width: 1382px) {
-
   .taskAria {
     width: 93%;
   }
-  
-  
-} 
-
+}
 
 @media (max-width: 1205px) {
-
   .taskAria {
     width: 78%;
     flex-wrap: wrap;
@@ -1255,20 +1289,17 @@ width: 319px;
 }
 
 @media (max-width: 1156px) {
-
   .taskAria {
     width: 77%;
     flex-wrap: wrap;
     padding: 0;
   }
-} 
+}
 
 @media (max-width: 366px) {
-
   .taskAria {
     width: 93% !important;
     flex-wrap: wrap;
     padding: 0;
   }
-  
 }
